deploy testapp/ingres-back-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist-ip
  namespace: default
spec:
  ipWhiteList:
      sourceRange:
      - "127.0.0.0/8"  
      - "10.0.0.0/8"
      - "172.16.0.0/12"
      - "192.168.0.0/16"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: testapp-back-route
  namespace: default    
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`testapp.localhost`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: testapp-back-svc
          kind: Service
          port: 4000
      middlewares:
        - name: whitelist-ip
