deploy testapp/ingres-front-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
  name: testapp-route
  namespace: default    
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`testapp.localhost`) && PathPrefix(`/`) && !PathPrefix(`/api`)
      kind: Rule
      services:
        - name: testapp-front-svc
          kind: Service
          port: 80

  tls:
    secretName: testapp-tls-cert
