deploy testapp/ingress-front.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # name: testapp-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: testapp
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: testapp-back-svc
                port:
                  number: 4000

      
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp-front-svc
                port:
                  number: 80
