deploy testapp/rederect-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-http
  namespace: default
spec:
  redirectScheme:
    scheme: http
    port: "80"
    permanent: true

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testapp.localhost`)
      kind: Rule
      middlewares:
        - name: redirect-to-http
      services: 
        - name: noop@internal
          kind: TraefikService
